log/build_2023-06-26_10-36-43/cpp_pubsub/stderr.log
[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:59:46: [0m[0;1;31merror: [0m[1mno member named 'prototype' in namespace 'sycl::ext::intel'[0m
using pipe_host_2_kernel = sycl::ext::intel::prototype::pipe<Pipe_test_ID, int, 8>;
[0;1;32m                           ~~~~~~~~~~~~~~~~~~^
[0m[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:65:19: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'pipe_host_2_kernel'[0m
      float out = pipe_host_2_kernel::read();
[0;1;32m                  ^
[0m[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:118:50: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'pipe_host_2_kernel'[0m
  auto node = std::make_shared<MinimalSubscriber<pipe_host_2_kernel>>();
[0;1;32m                                                 ^
[0m3 errors generated.
gmake[2]: *** [CMakeFiles/listener.fpga_emu.dir/build.make:76: CMakeFiles/listener.fpga_emu.dir/src/subscriber_member_function.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:166: CMakeFiles/listener.fpga_emu.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
